--- a/AzureOpenAIChat.csproj
+++ b/AzureOpenAIChat.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SemanticKernel" Version="0.24.230918.1-preview" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.0.0-beta4" />
   </ItemGroup>
 
 </Project>
